# jobpilot

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  original_plan.md  pyproject.toml
.github/workflows/: ci.yml  scoring-validation.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CampaignSetup.tsx  LiveProgress.tsx  ReviewDashboard.tsx  ShortlistView.tsx
k8s/: hpa.yaml  namespace.yaml
k8s/configmaps/: app-config.yaml
k8s/deployments/: api-server.yaml  playwright-pool.yaml  temporal-worker.yaml
k8s/secrets/: app-secrets.yaml
k8s/services/: api-server.yaml  temporal-worker.yaml
observability/: alert_rules.yml  prometheus.yml  promtail.yml
src/: main.py  worker.py
src/agents/: base.py  feedback_learner.py  outreach_drafter.py  outreach_finder.py  qa_critic.py  research.py  resume_parser.py
src/api/: main.py  websocket.py
src/api/routes/: approvals.py  campaigns.py  export.py  feedback.py  manual_links.py  results.py  resume.py
src/config/: platforms.yaml  scoring_weights.yaml  settings.py
src/models/: database.py  enums.py  schemas.py
src/orchestration/: activities.py  dag.py  planner.py  shared_context.py  workflows.py
src/scoring/: embeddings.py  engine.py  normalizer.py  risk_detector.py  skill_graph.py
src/scraping/: browser_pool.py  proxy_pool.py  rate_limiter.py  session_manager.py
src/services/: approval_service.py  cache.py  data_retention.py  email_sender.py  encryption.py  llm_gateway.py  prompt_guard.py  storage.py  vector_store.py
src/tools/: pdf_extractor.py
src/utils/: canonicalization.py  deduplication.py  hashing.py  logging.py  metrics.py
tests/: conftest.py
tests/fixtures/: sample_jds.json
tests/integration/: test_end_to_end.py  test_temporal_workflow.py
tests/load/: canary.py  locustfile.py
tests/scoring_validation/: ground_truth_dataset.json  test_scoring_accuracy.py
tests/unit/: test_deduplication.py  test_resume_parser.py  test_scaffold.py  test_scoring_engine.py  test_skill_graph.py
