[tool.poetry]
name = "jobpilot"
version = "0.1.0"
description = "JobPilot - Autonomous Job Hunting Orchestrator"
authors = ["Piyush"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
boto3 = "^1.34.84"
cryptography = "^42.0.5"
litellm = "^1.35.25"
pydantic = "^2.7.1"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
