[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobpilot"
version = "0.1.0"
description = "Autonomous multi-agent job hunting orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Workflow Engine
    "temporalio>=1.7.0",

    # LLM
    "litellm>=1.50.0",
    "openai>=1.50.0",

    # PDF Processing
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Vector Store
    "qdrant-client>=1.11.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Object Storage
    "minio>=7.2.0",

    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # HTTP
    "httpx>=0.27.0",

    # Web Scraping
    "playwright>=1.47.0",
    "beautifulsoup4>=4.12.0",

    # Text Processing
    "rapidfuzz>=3.9.0",

    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (require services)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "src.agents.*",
    "src.api.*",
    "src.models.database",
    "src.orchestration.activities",
    "src.orchestration.dag",
    "src.orchestration.planner",
    "src.platforms.*",
    "src.scraping.*",
    "src.services.cache",
    "src.services.email_sender",
    "src.services.encryption",
    "src.services.vector_store",
    "src.tools.pdf_extractor",
]
ignore_errors = true
